@@ -50,6 +50,7 @@ Version 1.11.8+dev:
    * Selecting off-map hexes, then hovering over a unit no longer causes
      the game to crash (bug #21351).
    * Changed: Added -Wextra-semi to pedantic compilation.
+   * Changed: Added -Wconditional-uninitialized to pedantic compilation.
 
 Version 1.11.8:
  * Add-ons client:
